welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: Unmatched closing brace '}' ignored here
	}
        ^SnakeBuggle:11: error: illegal start of statement (no modifiers allowed here)
override def run() {
^SnakeBuggle:33: error: Unmatched closing brace '}' ignored here
}
^